--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
-        "require-dev": {
-                "phpunit/phpunit": "^9.5"
-        }
+  "require-dev": {
+    "phpunit/phpunit": "^9.6.19"
+  },
+  "autoload": {
+    "files": [
+      ""
+    ]
+  }
 }
